# tide-pleco

./: .gitignore  Cargo.toml  README.md  main.rs  package.json  rollup.config.js  routes.json
public/: index.html
scripts/: backboard.js  client_http.js  utils.js
src/: App.svelte  Endpoint.svelte  lib.rs  main.js  main.rs
src-svelte/: App.svelte  Endpoint.svelte  main.js  package.json  rollup.config.js
