[package]
name = "tide_pleco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pleco = "0.5.0"
serde = "1.0.126"
serde_json = "1.0.59"
tide = "0.16.0"
http-types = "2.11.1"
async-std = { version = "1.9.0", features = ["attributes"] }

[[bin]]
name = "tide_pleco"
path = "src/main.rs"
